# src/routes/radioTopRoutes.js
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { RadioTopController } from '../controllers/radioTopController.js';
 import { StationDetailController } from '../controllers/stationDetailController.js';
+import { ArtistRadarController } from '../controllers/artistRadarController.js';
 
 export const radioTopRouter = Router();
 
@@ -22,4 +23,11 @@ radioTopRouter.get('/now-playing/:id', RadioTopController.getNowPlaying);
 
 // Stream resiliente otimizado para o RadioTop
 radioTopRouter.get('/stream/:id', RadioTopController.streamRadio);
+
+// Radar de Artistas Favoritos (Now Playing e Registo de Alertas)
+radioTopRouter.get('/artists/now-playing', ArtistRadarController.getNowPlayingByArtists);
+radioTopRouter.post('/artists/radar', ArtistRadarController.registerRadar);
+
+// Árvore de navegação para Android Auto e Apple CarPlay
+radioTopRouter.get('/car/browse', RadioTopController.getCarBrowserTree);
 
